--- a/templates/base.html
+++ b/templates/base.html
@@ -14,13 +14,10 @@
     <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
 
     <!-- Animate.css for SweetAlert animations -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
-    <!-- Custom CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <!-- Apple Dark Mode Theme CSS -->
-    <link rel="stylesheet" href="{% static 'css/apple-dark-mode-theme.css' %}">    <!-- Modern Black Theme CSS -->
+    <!-- Modern Black Theme CSS -->
     <link rel="stylesheet" href="{% static 'css/modern-black-theme.css' %}">
     
     <!-- Modern Black Theme Fixes -->
@@ -523,13 +520,8 @@
     <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
 
     <!-- SweetAlert2 -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <!-- Custom JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>    <!-- Custom JS -->
     <script src="{% static 'js/main.js' %}"></script>
-
-    <!-- Apple Dark Mode Icons JS -->
-    <script src="{% static 'js/apple-dark-icons.js' %}"></script>
 
     <!-- Database Connection Test JS -->
     {% if 'database' in request.path %}
