--- a/customers/templates/customers/customer_list.html
+++ b/customers/templates/customers/customer_list.html
@@ -64,28 +64,44 @@
         <div class="card-body">
             {% if page_obj %}
             <div class="table-responsive">
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>#</th>
+                <table class="table table-striped table-hover">                    <thead>
+                        <tr>                            <th>#</th>
+                            <th>كود العميل</th>
                             <th>اسم العميل</th>
+                            <th>نوع العميل</th>
+                            <th>التصنيف</th>
+                            <th>الفرع</th>
                             <th>رقم الهاتف</th>
-                            <th>البريد الإلكتروني</th>
                             <th>تاريخ الإضافة</th>
                             <th>الإجراءات</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for customer in page_obj %}
-                        <tr>
-                            <td>{{ forloop.counter }}</td>
-                            <td>
+                        <tr>                            <td>{{ forloop.counter }}</td>
+                            <td>{{ customer.code|default:"-" }}</td>                            <td>
                                 <a href="{% url 'customers:customer_detail' customer.pk %}" style="color: var(--primary); text-decoration: none; font-weight: bold;">
                                     {{ customer.name }}
                                 </a>
                             </td>
+                            <td>
+                                <span class="badge bg-info">{{ customer.get_customer_type_display }}</span>
+                            </td>
+                            <td>
+                                {% if customer.category %}
+                                    <span class="badge bg-secondary">{{ customer.category.name }}</span>
+                                {% else %}
+                                    -
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if customer.branch %}
+                                    {{ customer.branch.name }}
+                                {% else %}
+                                    -
+                                {% endif %}
+                            </td>
                             <td>{{ customer.phone }}</td>
-                            <td>{{ customer.email|default:"-" }}</td>
                             <td>{{ customer.created_at|date:"Y-m-d" }}</td>
                             <td>
                                 <div class="btn-group">
